--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   url_launcher: ^6.2.1
   flutter_bloc: ^8.1.3
+  dio: ^5.3.3
+
 
 dev_dependencies:
   flutter_test:
