--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,10 @@ dependencies:
   retrofit: ^4.0.3
   json_serializable: ^6.7.1
   json_annotation: ^4.8.1
+  geolocator: ^10.1.0
+  js: ^0.6.7
+  webview_flutter_web: ^0.2.2+3
+  webview_flutter: ^4.4.2
 
 
 dev_dependencies:
@@ -44,3 +48,4 @@ flutter:
  
   assets:
     - images/
+    - images/foto/
