Add languages localization

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
 
   cupertino_icons: ^1.0.2
@@ -26,6 +28,9 @@ dependencies:
   js: ^0.6.7
   webview_flutter_web: ^0.2.2+3
   webview_flutter: ^4.4.2
+  intl: ^0.18.1
+  
+
 
 
 dev_dependencies:
@@ -42,7 +47,7 @@ dev_dependencies:
 
 flutter:
 
- 
+  generate: true  
   uses-material-design: true
 
  
